adding adustments for mobile

--- a/index.html
+++ b/index.html
@@ -34,10 +34,16 @@
                         <a href="#availability">Availability</a>
                     </li>
                     <li>
+                        <a href="#gallery">Gallery</a>
+                    </li>
+                    <li>
                         <a href="#testimonials">Reviews</a>
                     </li>
                     <li>
                         <a href="#pricing">Pricing</a>
+                    </li>
+                    <li>
+                        <a href="#faq">FAQs</a>
                     </li>
                     <li>
                         <a href="#footer">Contact</a>
@@ -59,10 +65,16 @@
                         <a href="#availability">Availability</a>
                     </li>
                     <li>
+                        <a href="#gallery">Gallery</a>
+                    </li>
+                    <li>
                         <a href="#testimonials">Reviews</a>
                     </li>
                     <li>
                         <a href="#pricing">Pricing</a>
+                    </li>
+                    <li>
+                        <a href="#faq">FAQs</a>
                     </li>
                     <li>
                         <a href="#footer">Contact</a>
@@ -174,7 +186,7 @@
             </h3>
             <div class="testimonials-grid">
 
-                <div class="card">
+                <div class="card text-md">
                     <p>
                         "Our dog Happy is pretty difficult to work with and isnt friendly with some people so its hard to find a good sitter.
                         This isn't a problem with Lee. Happy loves staying with her. And it doesn't matter if its for a quick weekend or extended vacation, 
@@ -184,7 +196,7 @@
                         - Christian A. in December 2024
                     </p>
                 </div>
-                <div class="card">
+                <div class="card text-md">
                     <p>
                         "One of the kindest, most honest and comforting people we have met! Lee was INCREDIBLE with
                         my dog Rosie who took to her and her husband so quickly. My family has never left their dog
@@ -195,7 +207,7 @@
                         - Meghan A. in December 2024
                     </p>
                 </div>
-                <div class="card">
+                <div class="card text-md">
                     <p>
                         "Lee was wodnerful with my pup. Whe was very accomodating and understandinng. My dog was well taken car of and happy.
                         I received pictures ad videos often putting my mind at ease while I was away. I had no worries. She is definitely a car taker
@@ -205,7 +217,7 @@
                         - Savita R. in August 2024
                     </p>
                 </div>
-                <div class="card">
+                <div class="card text-md">
                     <p>
                         "Lee too wonderful care of our dog, kept us updated. Would highly recommend her and will use her again!"
                     </p>
@@ -224,7 +236,7 @@
             <h3 class="pricing-heading text-xl text-center">
                 Pricing
             </h3>
-            <p class="pricing-subheading text-medium text-center">
+            <p class="pricing-subheading text-md text-center">
                 Check below for details on services. In order to ensure everyone is happy
                 and confortable, dates are reserved for your dog(s) only.
             </p>
@@ -234,7 +246,7 @@
                         <h4 class="pricing-heading text-xl">
                             Meet & Greet
                         </h4>
-                        <p class="pricing-card-subheading">
+                        <p class="pricing-card-subheading text-md">
                             A quick introduction session. Meet at my house to get familiar with me and 
                             the environment your pup will be staying in.
                         </p>
@@ -243,7 +255,7 @@
                             /30 Minutes
                         </p>
                     </div>
-                    <div class="pricing-card-body">
+                    <div class="pricing-card-body text-md">
                         <ul>
                             <li><i class="fas fa-plus"></i> Call to schedule</li>
                             <li><i class="fas fa-plus"></i> No commitment</li>
@@ -258,15 +270,15 @@
                         <h4 class="pricing-heading text-xl">
                             1 Dog
                         </h4>
-                        <p class="pricing-card-subheading">
+                        <p class="pricing-card-subheading text-md">
                             The standard arragement for most owners. One to One care for your fluffy friend.
                         </p>
-                        <p class="pricing-card-price">
+                        <p class="pricing-card-price text-md">
                             <span class="text-xl">$50</span>
                             /per day
                         </p>
                     </div>
-                    <div class="pricing-card-body">
+                    <div class="pricing-card-body text-md">
                         <ul>
                             <li><i class="fas fa-plus"></i> Call to schedule</li>
                             <li><i class="fas fa-plus"></i> Custom dropoff & pickup</li>
@@ -281,7 +293,7 @@
                         <h4 class="pricing-heading text-xl">
                             1 Puppy<br>(Under 1 year)
                         </h4>
-                        <p class="pricing-card-subheading">
+                        <p class="pricing-card-subheading text-md">
                             The standard arragement for most owners. One to One care for your fluffy friend.
                         </p>
                         <p class="pricing-card-price">
@@ -289,7 +301,7 @@
                             /per day
                         </p>
                     </div>
-                    <div class="pricing-card-body">
+                    <div class="pricing-card-body text-md">
                         <ul>
                             <li><i class="fas fa-plus"></i> Call to schedule</li>
                             <li><i class="fas fa-plus"></i> Custom dropoff & pickup</li>
@@ -304,7 +316,7 @@
                         <h4 class="pricing-heading text-xl">
                             2 or more Dogs
                         </h4>
-                        <p class="pricing-card-subheading">
+                        <p class="pricing-card-subheading text-md">
                             I understand some dogs want to be together. I will watch both (all) your dogs for a discounted rate.
                         </p>
                         <p class="pricing-card-price">
@@ -312,7 +324,7 @@
                             /per day, per additional dog
                         </p>
                     </div>
-                    <div class="pricing-card-body">
+                    <div class="pricing-card-body text-md">
                         <ul>
                             <li><i class="fas fa-plus"></i> Call to schedule</li>
                             <li><i class="fas fa-plus"></i> Custom dropoff & pickup</li>
@@ -327,7 +339,7 @@
                         <h4 class="pricing-heading text-xl">
                             Additional Puppy
                         </h4>
-                        <p class="pricing-card-subheading">
+                        <p class="pricing-card-subheading text-md">
                             Considered on a case by case basis.
                         </p>
                         <p class="pricing-card-price">
@@ -335,7 +347,7 @@
                             /per day, per additional pup
                         </p>
                     </div>
-                    <div class="pricing-card-body">
+                    <div class="pricing-card-body text-md">
                         <ul>
                             <li><i class="fas fa-plus"></i> Call to schedule</li>
                             <li><i class="fas fa-plus"></i> Custom dropoff & pickup</li>
@@ -354,7 +366,7 @@
         <section class="features" id="features">
             <div class="container">
                 <h2 class="text-xl text-center">Why Choose Me?</h2>
-                <div class="features-grid">
+                <div class="features-grid text-lg">
                     <div class="feature-item">
                         <i class="fas fa-child feature-icon"></i>
                         <h3>No Children Present</h3>
@@ -377,7 +389,7 @@
 
 
        <!-- FAQ -->
-        <section class="faq bg-light">
+        <section class="faq bg-light" id="faq">
             <div class="container-sm">
                 <h3 class="text-xl text-center">
                     Frequently Asked Questions
@@ -389,7 +401,7 @@
                             <h4 class="text-md">What are your Holiday rates?</h4>
                             <i class="fas fa-plus"></i>
                         </div>
-                        <div class="faq-group-body">
+                        <div class="faq-group-body text-md">
                             <p>
                                 I currently do not charge Holiday rates.
                             </p>
@@ -401,7 +413,7 @@
                             <h4 class="text-md">Can we meet before booking your services?</h4>
                             <i class="fas fa-plus"></i>
                         </div>
-                        <div class="faq-group-body">
+                        <div class="faq-group-body text-md">
                             <p>
                                 A meet and greet is required prior to the first booking. I want to make sure your dog(s) like and feel
                                 comfortable with me.
@@ -414,7 +426,7 @@
                             <h4 class="text-md">How far in advance should I book?</h4>
                             <i class="fas fa-plus"></i>
                         </div>
-                        <div class="faq-group-body">
+                        <div class="faq-group-body text-md">
                             <p>
                                 Because I only watch one family at a time, I get booked pretty far in advance, especially for school And
                                 holiday breaks. Please contact me as far in advance as possible. I will pencil you in until another family
@@ -428,7 +440,7 @@
                             <h4 class="text-md">How many dogs can you watch at once?</h4>
                             <i class="fas fa-plus"></i>
                         </div>
-                        <div class="faq-group-body">
+                        <div class="faq-group-body text-md">
                             <p>
                                 Since I have no pets and only host one family at a time, I can host up to 4 dogs.
                             </p>
@@ -440,7 +452,7 @@
                             <h4 class="text-md">What do I need to provide to you for overnight boarding?</h4>
                             <i class="fas fa-plus"></i>
                         </div>
-                        <div class="faq-group-body">
+                        <div class="faq-group-body text-md">
                             <p>
                                 You will provide enough food for your dog(s) entire stay. Please bring a harness/collar or leash for each dog.
                                  Any sweaters/jackets for cold weather, if needed. I do have dog beds, blankets, and a dog create and food bowls,
@@ -454,7 +466,7 @@
                             <h4 class="text-md">What is your cancellation policy?</h4>
                             <i class="fas fa-plus"></i>
                         </div>
-                        <div class="faq-group-body">
+                        <div class="faq-group-body text-md">
                             <p>
                                 I am flexible with cancellations, up to 2 days prior to drop off date. Less than 48 hours will result in forfeit of deposit
                                 since I had to turn away other families during those booked dates.
@@ -467,7 +479,7 @@
                             <h4 class="text-md">Why does it cost more for a puppy?</h4>
                             <i class="fas fa-plus"></i>
                         </div>
-                        <div class="faq-group-body">
+                        <div class="faq-group-body text-md">
                             <p>
                                 Puppies require a lot more love and care, frequent potty breaks, and tend to have frequent accidents in the house.
                             </p>
@@ -479,7 +491,7 @@
                             <h4 class="text-md">Who else is in your hosuehold that my dog(s) would be staying with?</h4>
                             <i class="fas fa-plus"></i>
                         </div>
-                        <div class="faq-group-body">
+                        <div class="faq-group-body text-md">
                             <p>
                                 My husband Tommy, who is also retired, and myself are the only people in the home. He loves dogs also and
                                 they always love him back. No young children visit and we refrain from having visitors when dog(s) are visiting.
@@ -493,7 +505,7 @@
 
        <!--Contact Form-->
        <section class="contact" id="contact">
-        <div class="contact-form-header">
+        <div class="contact-form-header text-lg">
             <h2>Contact me here!</h2>
             <form action="https://formsubmit.co/c6fffa219db3c938d863624dd97d5e11" method="POST" class="contact-form bg-light">
                 <label for="name">Name:</label>
@@ -514,36 +526,38 @@
         <footer class="footer bg-black" id="footer">
             <div class="container">
                 <div class="footer-grid">
-                    <div class="footer-logo">
-                        <div class="card">
-                            <h4>Want to leave me a review?</h4>
-                            <p class="text-sm">
-                                I always want to hear what I did well and what I can do better. Leave me a submission here and if you want me to use it as a testimonial let me know!
-                            </p>
-                            <form action="https://formsubmit.co/c6fffa219db3c938d863624dd97d5e11" method="POST" class="contact-form">
-                                <textarea name="message" id="message" placeholder="Enter your message here." rows="4"></textarea>
-                                <button type="submit" class="btn btn-primary btn-block">Submit Review</button>
-                            </form>
-                        </div>
-                    </div>
                     <div>
-                        <h4>Quick Links</h4>
+                        <h3>Quick Links</h3>
                         <ul>
                             <li><a href="#home">Home</a></li>
                             <li><a href="#availability">Availability</a></li>
+                            <li><a href="#gallery">Gallery</a></li>
                             <li><a href="#testimonials">Reviews</a></li>
                             <li><a href="#pricing">Pricing</a></li>
+                            <li><a href="#faq">FAQs</a></li>
                             <li><a href="#footer">Contact</a></li>
                         </ul>
                     </div>
                     <div>
-                        <h4>Contact</h4>
+                        <h3>Contact</h3>
                         <ul>
                             <li><a href="#footer">leemezza@verizon.net</a></li>
                             <li><a href="#footer">(516) 728-8540</a></li>
                             <li><a href="https://www.facebook.com/lee.mezzasalma"><i class="fab fa-facebook"></i>Facebook</a></li>
                             <li><a href ="https://www.instagram.com/lee_mezza/"><i class="fab fa-instagram"></i>Instagram</a></li>
                         </ul>
+                    </div>
+                </div>
+                <div class="footer-review">
+                    <div class="card">
+                        <h4>Want to leave me a review?</h4>
+                        <p class="text-sm">
+                            I always want to hear what I did well and what I can do better. Leave me a submission here and if you want me to use it as a testimonial let me know!
+                        </p>
+                        <form action="https://formsubmit.co/c6fffa219db3c938d863624dd97d5e11" method="POST" class="contact-form">
+                            <textarea name="message" id="message" placeholder="Enter your message here." rows="4"></textarea>
+                            <button type="submit" class="btn btn-primary btn-block">Submit Review</button>
+                        </form>
                     </div>
                 </div>
             </div>
