--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
         <section class="features" id="features">
             <div class="container">
                 <h2 class="text-xl text-center">Why Choose Me?</h2>
-                <div class="features-grid text-lg">
+                <div class="features-grid text-md">
                     <div class="feature-item">
                         <i class="fas fa-child feature-icon"></i>
                         <h3>No Children Present</h3>
@@ -547,17 +547,17 @@
                             <li><a href ="https://www.instagram.com/lee_mezza/"><i class="fab fa-instagram"></i>Instagram</a></li>
                         </ul>
                     </div>
-                </div>
-                <div class="footer-review">
-                    <div class="card">
-                        <h4>Want to leave me a review?</h4>
-                        <p class="text-sm">
-                            I always want to hear what I did well and what I can do better. Leave me a submission here and if you want me to use it as a testimonial let me know!
-                        </p>
-                        <form action="https://formsubmit.co/c6fffa219db3c938d863624dd97d5e11" method="POST" class="contact-form">
-                            <textarea name="message" id="message" placeholder="Enter your message here." rows="4"></textarea>
-                            <button type="submit" class="btn btn-primary btn-block">Submit Review</button>
-                        </form>
+                    <div class="footer-review">
+                        <div class="card">
+                            <h4>Want to leave me a review?</h4>
+                            <p class="text-sm">
+                                I always want to hear what I did well and what I can do better. Leave me a submission here and if you want me to use it as a testimonial let me know!
+                            </p>
+                            <form action="https://formsubmit.co/c6fffa219db3c938d863624dd97d5e11" method="POST" class="contact-form">
+                                <textarea name="message" id="message" placeholder="Enter your message here." rows="4"></textarea>
+                                <button type="submit" class="btn btn-primary btn-block">Submit Review</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
