adding calendar and fixing typos

--- a/index.html
+++ b/index.html
@@ -93,18 +93,18 @@
                 </h1>
                 <p class="hero-text text-md">
                     I have loved and owned dogs all my life. In 2024, I lost my beloved Tito, a rescue, who I loved for over 12 years.
-                    I retired in October 2024, alone with my husband. Since we are planning on travelling over the next few years, we have decided not to adopt
+                    I retired in October 2024, alone with my husband. Since we are planning on traveling over the next few years, we have decided not to adopt
                     another pet at the moment. However, we both miss having a dog to love, cuddle, and play with. What started out as watching a friend's pups while she
                     was away, grew into a small business.
                 </p>
                 <p class="hero-text text-md">
                     With over 10 years experience volunteering at local animal shelters, you can feel secure leaving your dog(s) with me.
                     I only host one dog family at a time. All my love and attention will be for your dog(s) only. I do my best to accomodate
-                    your dog's schedule and needs, so they feel as cofortable as possible in my home while you are away. I have a large
+                    your dog's schedule and needs, so they feel as comfortable as possible in my home while you are away. I have a large
                     fenced in backyard where they are never left unattended. I will take them on walks and provide daily play time if your dog enjoys that! <br>
                 </p>
                 <p class="hero-text text-md">
-                    Let me know if your dog has any special needs or habits, so I am able to accomodate theur individul personalities.
+                    Let me know if your dog has any special needs or habits, so I am able to accomodate theur individual personalities.
                     Dogs are as unique as people and loved for their individuality.
                 </p>
             </div>
@@ -119,7 +119,7 @@
                 See Calendar for Available/Unavailable Days - Please contact to confirm availability!
             </h2>
             <div class="calendar-content">
-                    <iframe src="https://calendar.google.com/calendar/embed?src=alvyncostello31%40gmail.com&ctz=America%2FNew_York" class="calendar-google" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+                    <iframe src="https://calendar.google.com/calendar/embed?src=fortheloveofdogs111%40gmail.com&ctz=America%2FNew_York" class="calendar-google" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
             </div>
         </div>
      </section>
@@ -209,8 +209,8 @@
                 </div>
                 <div class="card text-md">
                     <p>
-                        "Lee was wodnerful with my pup. Whe was very accomodating and understandinng. My dog was well taken car of and happy.
-                        I received pictures ad videos often putting my mind at ease while I was away. I had no worries. She is definitely a car taker
+                        "Lee was wodnerful with my pup. Whe was very accomodating and understanding. My dog was well taken care of and happy.
+                        I received pictures ad videos often putting my mind at ease while I was away. I had no worries. She is definitely a caretaker
                         I would use again."
                     </p>
                     <p>
@@ -238,7 +238,7 @@
             </h3>
             <p class="pricing-subheading text-md text-center">
                 Check below for details on services. In order to ensure everyone is happy
-                and confortable, dates are reserved for your dog(s) only.
+                and comfortable, dates are reserved for your dog(s) only.
             </p>
             <div class="pricing-grid">
                 <div class="card bg-light">
@@ -271,7 +271,7 @@
                             1 Dog
                         </h4>
                         <p class="pricing-card-subheading text-md">
-                            The standard arragement for most owners. One to One care for your fluffy friend.
+                            The standard arrangement for most owners. One to One care for your fluffy friend.
                         </p>
                         <p class="pricing-card-price text-md">
                             <span class="text-xl">$50</span>
@@ -294,7 +294,7 @@
                             1 Puppy<br>(Under 1 year)
                         </h4>
                         <p class="pricing-card-subheading text-md">
-                            The standard arragement for most owners. One to One care for your fluffy friend.
+                            The standard arrangement for most owners. One to One care for your fluffy friend.
                         </p>
                         <p class="pricing-card-price">
                             <span class="text-xl">$75</span>
@@ -488,7 +488,7 @@
 
                     <div class="faq-group">
                         <div class="faq-group-header">
-                            <h4 class="text-md">Who else is in your hosuehold that my dog(s) would be staying with?</h4>
+                            <h4 class="text-md">Who else is in your household that my dog(s) would be staying with?</h4>
                             <i class="fas fa-plus"></i>
                         </div>
                         <div class="faq-group-body text-md">
@@ -507,7 +507,7 @@
        <section class="contact" id="contact">
         <div class="contact-form-header text-lg">
             <h2>Contact me here!</h2>
-            <form action="https://formsubmit.co/c6fffa219db3c938d863624dd97d5e11" method="POST" class="contact-form bg-light">
+            <form action="https://formsubmit.co/0cd57fd2a40d59ad841b14b1ce03cc7e" method="POST" class="contact-form bg-light">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" placeholder="Full Name" required>
 
@@ -543,8 +543,8 @@
                         <ul>
                             <li><a href="#footer">leemezza@verizon.net</a></li>
                             <li><a href="#footer">(516) 728-8540</a></li>
-                            <li><a href="https://www.facebook.com/lee.mezzasalma"><i class="fab fa-facebook"></i>Facebook</a></li>
-                            <li><a href ="https://www.instagram.com/lee_mezza/"><i class="fab fa-instagram"></i>Instagram</a></li>
+                            <!-- <li><a href="https://www.facebook.com/lee.mezzasalma"><i class="fab fa-facebook"></i>Facebook</a></li>
+                            <li><a href ="https://www.instagram.com/lee_mezza/"><i class="fab fa-instagram"></i>Instagram</a></li> -->
                         </ul>
                     </div>
                     <div class="footer-review">
@@ -553,7 +553,7 @@
                             <p class="text-sm">
                                 I always want to hear what I did well and what I can do better. Leave me a submission here and if you want me to use it as a testimonial let me know!
                             </p>
-                            <form action="https://formsubmit.co/c6fffa219db3c938d863624dd97d5e11" method="POST" class="contact-form">
+                            <form action="https://formsubmit.co/0cd57fd2a40d59ad841b14b1ce03cc7e" method="POST" class="contact-form">
                                 <textarea name="message" id="message" placeholder="Enter your message here." rows="4"></textarea>
                                 <button type="submit" class="btn btn-primary btn-block">Submit Review</button>
                             </form>
