adjusting format of html and css for hero image issue

--- a/index.html
+++ b/index.html
@@ -85,30 +85,32 @@
     </nav>
 
     <!-- hero -->
-     <section class="hero" id="hero">
+    <section class="hero" id="hero">
         <div class="container">
             <div class="hero-content">
-                <h1 class="hero-heading text-xxl">
-                    My Story...
-                </h1>
-                <p class="hero-text text-md">
-                    I have loved and owned dogs all my life. In 2024, I lost my beloved Tito, a rescue, who I loved for over 12 years.
-                    I retired in October 2024, alone with my husband. Since we are planning on traveling over the next few years, we have decided not to adopt
-                    another pet at the moment. However, we both miss having a dog to love, cuddle, and play with. What started out as watching a friend's pups while she
-                    was away, grew into a small business.
-                </p>
-                <p class="hero-text text-md">
-                    With over 10 years experience volunteering at local animal shelters, you can feel secure leaving your dog(s) with me.
-                    I only host one dog family at a time. All my love and attention will be for your dog(s) only. I do my best to accomodate
-                    your dog's schedule and needs, so they feel as comfortable as possible in my home while you are away. I have a large
-                    fenced in backyard where they are never left unattended. I will take them on walks and provide daily play time if your dog enjoys that! <br>
-                </p>
-                <p class="hero-text text-md">
-                    Let me know if your dog has any special needs or habits, so I am able to accomodate theur individual personalities.
-                    Dogs are as unique as people and loved for their individuality.
-                </p>
+                <div class="hero-text-container">
+                    <h1 class="hero-heading text-xxl">
+                        My Story...
+                    </h1>
+                    <p class="hero-text text-md">
+                        I have loved and owned dogs all my life. In 2024, I lost my beloved Tito, a rescue, who I loved for over 12 years.
+                        I retired in October 2024, alone with my husband. Since we are planning on travelling over the next few years, we have decided not to adopt
+                        another pet at the moment. However, we both miss having a dog to love, cuddle, and play with. What started out as watching a friend's pups while she
+                        was away, grew into a small business.
+                    </p>
+                    <p class="hero-text text-md">
+                        With over 10 years experience volunteering at local animal shelters, you can feel secure leaving your dog(s) with me.
+                        I only host one dog family at a time. All my love and attention will be for your dog(s) only. I do my best to accomodate
+                        your dog's schedule and needs, so they feel as cofortable as possible in my home while you are away. I have a large
+                        fenced in backyard where they are never left unattended. I will take them on walks and provide daily play time if your dog enjoys that! <br>
+                    </p>
+                    <p class="hero-text text-md">
+                        Let me know if your dog has any special needs or habits, so I am able to accomodate theur individul personalities.
+                        Dogs are as unique as people and loved for their individuality.
+                    </p>
+                </div>
+                <img src="images/instagram.png" alt="Dog and walker" class="hero-image">
             </div>
-            <img src="images/instagram.png" alt="Dog and walker" class="hero-image">
         </div>
      </section>
 
