adjusting format of html and css for hero image issue

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         fenced in backyard where they are never left unattended. I will take them on walks and provide daily play time if your dog enjoys that! <br>
                     </p>
                     <p class="hero-text text-md">
-                        Let me know if your dog has any special needs or habits, so I am able to accomodate theur individul personalities.
+                        Let me know if your dog has any special needs or habits, so I am able to accomodate theur individual personalities.
                         Dogs are as unique as people and loved for their individuality.
                     </p>
                 </div>
@@ -240,7 +240,7 @@
             </h3>
             <p class="pricing-subheading text-md text-center">
                 Check below for details on services. In order to ensure everyone is happy
-                and comfortable, dates are reserved for your dog(s) only.
+                and comfortable, dates are reserved for your dog(s) only. Dogs under 45 lbs only.
             </p>
             <div class="pricing-grid">
                 <div class="card bg-light">
@@ -419,6 +419,18 @@
                             <p>
                                 A meet and greet is required prior to the first booking. I want to make sure your dog(s) like and feel
                                 comfortable with me.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="faq-group">
+                        <div class="faq-group-header">
+                            <h4 class="text-md">What types of dog(s) do you watch?</h4>
+                            <i class="fas fa-plus"></i>
+                        </div>
+                        <div class="faq-group-body text-md">
+                            <p>
+                                All breeds are welcome and I love dogs of all types, however, I do not watch dog(s) over 45 lbs.
                             </p>
                         </div>
                     </div>
