--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
                     </p>
                     <p class="hero-text text-md">
                         With over 10 years experience volunteering at local animal shelters, you can feel secure leaving your dog(s) with me.
-                        I only host one dog family at a time. All my love and attention will be for your dog(s) only. I do my best to accomodate
-                        your dog's schedule and needs, so they feel as cofortable as possible in my home while you are away. I have a large
+                        I only host one dog family at a time. All my love and attention will be for your dog(s) only. I do my best to accommodate
+                        your dog's schedule and needs, so they feel as comfortable as possible in my home while you are away. I have a large
                         fenced in backyard where they are never left unattended. I will take them on walks and provide daily play time if your dog enjoys that! <br>
                     </p>
                     <p class="hero-text text-md">
-                        Let me know if your dog has any special needs or habits, so I am able to accomodate theur individual personalities.
+                        Let me know if your dog has any special needs or habits, so I am able to accommodate their individual personalities.
                         Dogs are as unique as people and loved for their individuality.
                     </p>
                 </div>
@@ -211,8 +211,8 @@
                 </div>
                 <div class="card text-md">
                     <p>
-                        "Lee was wodnerful with my pup. Whe was very accomodating and understanding. My dog was well taken care of and happy.
-                        I received pictures ad videos often putting my mind at ease while I was away. I had no worries. She is definitely a caretaker
+                        "Lee was wonderful with my pup. Whe was very accomodating and understanding. My dog was well taken care of and happy.
+                        I received pictures and videos often putting my mind at ease while I was away. I had no worries. She is definitely a caretaker
                         I would use again."
                     </p>
                     <p>
@@ -221,7 +221,7 @@
                 </div>
                 <div class="card text-md">
                     <p>
-                        "Lee too wonderful care of our dog, kept us updated. Would highly recommend her and will use her again!"
+                        "Lee took wonderful care of our dog, kept us updated. Would highly recommend her and will use her again!"
                     </p>
                     <p>
                         - Connie P. in July 2024
@@ -469,7 +469,7 @@
                         <div class="faq-group-body text-md">
                             <p>
                                 You will provide enough food for your dog(s) entire stay. Please bring a harness/collar or leash for each dog.
-                                 Any sweaters/jackets for cold weather, if needed. I do have dog beds, blankets, and a dog create and food bowls,
+                                 Any sweaters/jackets for cold weather, if needed. I do have dog beds, blankets, and a dog crate and food bowls,
                                  but you are welcome to bring their own if that makes them more comfortable.
                             </p>
                         </div>
@@ -555,7 +555,7 @@
                     <div>
                         <h3>Contact</h3>
                         <ul>
-                            <li><a href="#footer">leemezza@verizon.net</a></li>
+                            <li><a href="#footer">fortheloveofdogs111@gmail.com</a></li>
                             <li><a href="#footer">(516) 728-8540</a></li>
                             <!-- <li><a href="https://www.facebook.com/lee.mezzasalma"><i class="fab fa-facebook"></i>Facebook</a></li>
                             <li><a href ="https://www.instagram.com/lee_mezza/"><i class="fab fa-instagram"></i>Instagram</a></li> -->
