--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </h1>
                     <p class="hero-text text-md">
                         I have loved and owned dogs all my life. In 2024, I lost my beloved Tito, a rescue, who I loved for over 12 years.
-                        I retired in October 2024, alone with my husband. Since we are planning on travelling over the next few years, we have decided not to adopt
+                        I retired in October 2024, along with my husband. Since we are planning on travelling over the next few years, we have decided not to adopt
                         another pet at the moment. However, we both miss having a dog to love, cuddle, and play with. What started out as watching a friend's pups while she
                         was away, grew into a small business.
                     </p>
@@ -110,6 +110,9 @@
                     </p>
                 </div>
                 <img src="images/instagram.png" alt="Dog and walker" class="hero-image">
+                <p class="herp-text text-sm"> 
+                    Located in Seaford, NY
+                </p>
             </div>
         </div>
      </section>
@@ -139,27 +142,27 @@
                     <div class="gallery-item">
                         <img src="images/dog2.jpg" alt="" class="gallery-img">
                     </div>
-                    <div class="gallery-item">
+                    <!-- <div class="gallery-item">
                         <img src="images/dog3.jpg" alt="" class="gallery-img">
-                    </div>
-                    <div class="gallery-item">
+                    </div> -->
+                    <!-- <div class="gallery-item">
                         <img src="images/dog4.jpg" alt="" class="gallery-img">
-                    </div>
+                    </div> -->
                     <div class="gallery-item">
                         <img src="images/dog5.jpg" alt="" class="gallery-img">
                     </div>
-                    <div class="gallery-item">
+                    <!-- <div class="gallery-item">
                         <img src="images/dog6.jpg" alt="" class="gallery-img">
-                    </div>
+                    </div> -->
                     <div class="gallery-item">
                         <img src="images/dog7.jpg" alt="" class="gallery-img">
                     </div>
                     <div class="gallery-item">
                         <img src="images/dog8.jpg" alt="" class="gallery-img">
                     </div>
-                    <div class="gallery-item">
+                    <!-- <div class="gallery-item">
                         <img src="images/dog9.jpg" alt="" class="gallery-img">
-                    </div>
+                    </div> -->
                     <div class="gallery-item">
                         <img src="images/dog10.jpg" alt="" class="gallery-img">
                     </div>
@@ -175,6 +178,46 @@
                     <div class="gallery-item">
                         <img src="images/dog14.jpg" alt="" class="gallery-img">
                     </div>
+                    
+                    <!-- <div class="gallery-item">
+                        <img src="images/dog15.jpg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog16.jpg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog17.jpg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog18.jpg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog19.jpg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog20.jpg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog21.jpg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog22.jpg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog23.jpg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog24.jpg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog25.jpg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog26.jpg" alt="" class="gallery-img">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/dog27.jpg" alt="" class="gallery-img">
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -195,7 +238,7 @@
                         our minds are always at ease when our dog stays with her."
                     </p>
                     <p>
-                        - Christian A. in December 2024
+                        Christian A. - December 2024
                     </p>
                 </div>
                 <div class="card text-md">
@@ -206,7 +249,7 @@
                         when we met Lee. We will 1000% be leaving our pups with her in the future and can't recommend her more :) thanks again!"
                     </p>
                     <p>
-                        - Meghan A. in December 2024
+                        Meghan A. - December 2024
                     </p>
                 </div>
                 <div class="card text-md">
@@ -216,7 +259,7 @@
                         I would use again."
                     </p>
                     <p>
-                        - Savita R. in August 2024
+                        Savita R. - August 2024
                     </p>
                 </div>
                 <div class="card text-md">
@@ -224,10 +267,49 @@
                         "Lee took wonderful care of our dog, kept us updated. Would highly recommend her and will use her again!"
                     </p>
                     <p>
-                        - Connie P. in July 2024
+                        Connie P. - July 2024
                     </p>
                 </div>
-
+                <div class="card text-md">
+                    <p>
+                        "They were the best!! Would definitely recommend to friends and will be using again!!!"
+                    </p>
+                    <p>
+                        Susan W. - August 2025
+                    </p>
+                </div>
+                <div class="card text-md">
+                    <p>
+                        "Lee was wonderful with our dog while we were away for a bit. She took wonderful care of him and was very communicative. Thank you, Lee!"
+                    </p>
+                    <p>
+                        Chaya L. – May 2025
+                    </p>
+                </div>
+                <div class="card text-md">
+                    <p>
+                        "Lee was very easy to deal with. Very responsive and sent pictures and updates during Chief’s stay. My dog seemed to have enjoyed the environment. Would 100% use again."
+                    </p>
+                    <p>
+                        Joe B. – June 2025
+                    </p>
+                </div>
+                <div class="card text-md">
+                    <p>
+                        "My Murphy loved Lee and her husband! No complaints, would use again :)"
+                    </p>
+                    <p>
+                        Meghan C. – February 2025
+                    </p>
+                </div>
+                <div class="card text-md">
+                    <p>
+                        "I used Lee for the first time this pasted weekend. Now first things first I don’t leave me baby with just anyone. It takes alot for me to hand him over to someone. From the first text then phone call then meet & greet I was hooked. Both Lee & her husband made Harley feel so welcomed & loved which made me leave without getting in my car & crying LOL 😂 highly recommend"
+                    </p>
+                    <p>
+                        Cathy P. – June & July 2025
+                    </p>
+                </div>
             </div>
         </div>
       </section>
