adding new dog photos

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         <img src="images/dog14.jpg" alt="" class="gallery-img">
                     </div>
                     
-                    <!-- <div class="gallery-item">
+                    <div class="gallery-item">
                         <img src="images/dog15.jpg" alt="" class="gallery-img">
                     </div>
                     <div class="gallery-item">
@@ -217,7 +217,7 @@
                     </div>
                     <div class="gallery-item">
                         <img src="images/dog27.jpg" alt="" class="gallery-img">
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </section>
