--- a/index.html
+++ b/index.html
@@ -178,7 +178,6 @@
                     <div class="gallery-item">
                         <img src="images/dog14.jpg" alt="" class="gallery-img">
                     </div>
-                    
                     <div class="gallery-item">
                         <img src="images/dog15.jpg" alt="" class="gallery-img">
                     </div>
@@ -237,7 +236,7 @@
                         This isn't a problem with Lee. Happy loves staying with her. And it doesn't matter if its for a quick weekend or extended vacation, 
                         our minds are always at ease when our dog stays with her."
                     </p>
-                    <p>
+                    <p class="testimonial-author">
                         Christian A. - December 2024
                     </p>
                 </div>
@@ -248,7 +247,7 @@
                         alone with anyone and was so nervous to leave her with someone but immediately felt comfortable
                         when we met Lee. We will 1000% be leaving our pups with her in the future and can't recommend her more :) thanks again!"
                     </p>
-                    <p>
+                    <p class="testimonial-author">
                         Meghan A. - December 2024
                     </p>
                 </div>
@@ -256,7 +255,7 @@
                     <p>
                         "I used Lee for the first time this pasted weekend. Now first things first I don’t leave me baby with just anyone. It takes alot for me to hand him over to someone. From the first text then phone call then meet & greet I was hooked. Both Lee & her husband made Harley feel so welcomed & loved which made me leave without getting in my car & crying LOL 😂 highly recommend"
                     </p>
-                    <p>
+                    <p class="testimonial-author">
                         Cathy P. – June & July 2025
                     </p>
                 </div>
@@ -266,7 +265,7 @@
                         I received pictures and videos often putting my mind at ease while I was away. I had no worries. She is definitely a caretaker
                         I would use again."
                     </p>
-                    <p>
+                    <p class="testimonial-author">
                         Savita R. - August 2024
                     </p>
                 </div>
@@ -274,7 +273,7 @@
                     <p>
                         "Lee took wonderful care of our dog, kept us updated. Would highly recommend her and will use her again!"
                     </p>
-                    <p>
+                    <p class="testimonial-author">
                         Connie P. - July 2024
                     </p>
                 </div>
@@ -282,7 +281,7 @@
                     <p>
                         "They were the best!! Would definitely recommend to friends and will be using again!!!"
                     </p>
-                    <p>
+                    <p class="testimonial-author">
                         Susan W. - August 2025
                     </p>
                 </div>
@@ -290,7 +289,7 @@
                     <p>
                         "My Murphy loved Lee and her husband! No complaints, would use again :)"
                     </p>
-                    <p>
+                    <p class="testimonial-author">
                         Meghan C. – February 2025
                     </p>
                 </div>
@@ -298,7 +297,7 @@
                     <p>
                         "Lee was wonderful with our dog while we were away for a bit. She took wonderful care of him and was very communicative. Thank you, Lee!"
                     </p>
-                    <p>
+                    <p class="testimonial-author">
                         Chaya L. – May 2025
                     </p>
                 </div>
@@ -306,7 +305,7 @@
                     <p>
                         "Lee was very easy to deal with. Very responsive and sent pictures and updates during Chief’s stay. My dog seemed to have enjoyed the environment. Would 100% use again."
                     </p>
-                    <p>
+                    <p class="testimonial-author">
                         Joe B. – June 2025
                     </p>
                 </div>
