adding ui adjustmnets

--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
                         Dogs are as unique as people and loved for their individuality.
                     </p>
                 </div>
-                <img src="images/instagram.png" alt="Dog and walker" class="hero-image">
-                <p class="herp-text text-sm"> 
-                    Located in Seaford, NY
-                </p>
+                <div class="hero-image-container">
+                    <img src="images/instagram.png" alt="Dog and walker" class="hero-image">
+                    <p class="hero-location text-md">Located in Seaford, NY</p>
+                </div>
             </div>
         </div>
      </section>
